ZEsarUX 13.0 - xxx edition. 26 September 2025

Added setting to automatically order icons on ZX Desktop
Allow drag&drop of compressed files

Improved editing joystick to events/keys (allow to unasign easily)

Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name

----



ZEsarUX 12.1 - Night Shift edition. 25 September 2025

* New things added:

Added Streaming mode to ZENG Online for ZX Spectrum. It improves gaming experience: reduces lag and drops all game state inconsistencies between all players
Added support for steering wheel joystick (and other analog joystick controls) to racing games (using pre-defined modification for specific games or custom)
Added real joystick support for SDL2
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons
Added setting to emulate a cheap joystick device which puts values in the bus, affecting interrupts
Added ZXMMC+ emulation
Added second MMC/SD card emulation
Allow to save to disk audio captured from External Audio Source
Allow to save ZX80/81 screen to .scr file
Allow to LOAD "name" of a ZX81 .P81 file
Added direct functions to increase/decrease/silence Audio Volume
Added lots of my tapes recovered from the 80s and 90s:
- A total of 264 additional files in the my_soft folder
- Include Utilities and Games
- Some are new, others are different versions of existing programs
- Mostly Spectrum but also some ZX81 programs (made by my father and brothers)
Allow to locate rom files running ZEsarUX from a current folder different than the rom path
Allow machine selection by family type (Spectrum, ZX80, ZX81, CPC, etc)
Allow to change configuration file path from the menu
Allow to view expanded file from Storage submenus (tape, dsk, etc)
Added configuration wizard when running ZEsarUX for the first time
Allow to save text note on a ZSF snapshot
