@@ -4,6 +4,7 @@ Agregada opción para ordenar automaticámente los iconos en ZX Desktop
 Permitir drag&drop de archivos comprimidos
 
 Mejorado edición de joystick a eventos/teclas (permitir desasignar fácilmente)
+Mejorado debug cpu: mostrar cuando los valores de registros se han modificado por la última execución de instrucción
 
 Agregado carga con --tape y --realtape con autocarga de snapshot al inicio
 Corregido descomprimir archivos tar y rar con espacios en el nombre
